--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-cam-cloud",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -29,7 +29,6 @@
     "ngx-infinite-scroll": "^9.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.6.0",
-    "rxjs-compat": "^6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
@@ -53,5 +52,8 @@
     "ts-node": "~8.10.2",
     "tslint": "~5.18.0",
     "typescript": "~3.9.6"
+  },
+  "browser": {
+    "crypto": false
   }
 }
