--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-cam-cloud",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -11,16 +11,16 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^10.0.4",
-    "@angular/cdk": "^10.1.0",
-    "@angular/common": "^10.0.4",
-    "@angular/compiler": "^10.0.4",
-    "@angular/core": "^10.0.4",
-    "@angular/forms": "^10.0.4",
-    "@angular/material": "^10.1.0",
-    "@angular/platform-browser": "^10.0.4",
-    "@angular/platform-browser-dynamic": "^10.0.4",
-    "@angular/router": "^10.0.4",
+    "@angular/animations": "^10.0.8",
+    "@angular/cdk": "^10.1.2",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
     "angular2-moment": "^1.9.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
@@ -28,30 +28,31 @@
     "ng-connection-service": "^1.0.4",
     "ngx-infinite-scroll": "^9.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "^6.6.0",
+    "rxjs": "^6.6.2",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.3",
-    "@angular/cli": "^10.0.3",
-    "@angular/compiler-cli": "^10.0.4",
-    "@angular/language-service": "^10.0.4",
-    "@types/jasmine": "^3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "^10.0.8",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.0.23",
+    "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "~5.18.0",
-    "typescript": "~3.9.6"
+    "tslint": "~6.1.3",
+    "typescript": "~3.9.7"
   },
   "browser": {
     "crypto": false
