--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-cam-cloud",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -11,16 +11,16 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^10.1.1",
-    "@angular/cdk": "^10.2.0",
-    "@angular/common": "^10.1.1",
-    "@angular/compiler": "^10.1.1",
-    "@angular/core": "^10.1.1",
-    "@angular/forms": "^10.1.1",
-    "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "^10.1.1",
-    "@angular/platform-browser-dynamic": "^10.1.1",
-    "@angular/router": "^10.1.1",
+    "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^10.2.3",
+    "@angular/common": "^10.1.4",
+    "@angular/compiler": "^10.1.4",
+    "@angular/core": "^10.1.4",
+    "@angular/forms": "^10.1.4",
+    "@angular/material": "^10.2.3",
+    "@angular/platform-browser": "^10.1.4",
+    "@angular/platform-browser-dynamic": "^10.1.4",
+    "@angular/router": "^10.1.4",
     "angular2-moment": "^1.9.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
@@ -31,28 +31,28 @@
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.1",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.1.0",
-    "@angular/compiler-cli": "^10.1.1",
-    "@angular/language-service": "^10.1.1",
+    "@angular-devkit/build-angular": "^0.1001.4",
+    "@angular/cli": "^10.1.4",
+    "@angular/compiler-cli": "^10.1.4",
+    "@angular/language-service": "^10.1.4",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.11.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.2.2",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "~8.10.2",
-    "tslint": "~6.1.3",
-    "typescript": "~4.0.2"
+    "ts-node": "~9.0.0",
+    "eslint": "~7.10.0",
+    "typescript": "~4.0.3"
   },
   "browser": {
     "crypto": false
