--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-cam-cloud",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -11,47 +11,47 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^10.2.0",
-    "@angular/cdk": "^10.2.6",
-    "@angular/common": "^10.2.0",
-    "@angular/compiler": "^10.2.0",
-    "@angular/core": "^10.2.0",
-    "@angular/forms": "^10.2.0",
-    "@angular/material": "^10.2.6",
-    "@angular/platform-browser": "^10.2.0",
-    "@angular/platform-browser-dynamic": "^10.2.0",
-    "@angular/router": "^10.2.0",
-    "angular2-moment": "^1.9.0",
-    "core-js": "^3.6.5",
+    "@angular/animations": "~11.0.4",
+    "@angular/cdk": "~11.0.2",
+    "@angular/common": "~11.0.4",
+    "@angular/compiler": "~11.0.4",
+    "@angular/core": "~11.0.4",
+    "@angular/forms": "~11.0.4",
+    "@angular/material": "~11.0.2",
+    "@angular/platform-browser": "~11.0.4",
+    "@angular/platform-browser-dynamic": "~11.0.4",
+    "@angular/router": "~11.0.4",
+    "core-js": "^3.8.1",
     "crypto-js": "^4.0.0",
     "hammerjs": "^2.0.8",
     "ng-connection-service": "^1.0.4",
-    "ngx-infinite-scroll": "^9.1.0",
+    "ngx-infinite-scroll": "~10.0.1",
+    "ngx-moment": "~5.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.3",
-    "zone.js": "^0.11.3"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.0",
-    "@angular/language-service": "^10.2.0",
-    "@types/jasmine": "^3.6.0",
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@angular/language-service": "~11.0.4",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.14.6",
     "codelyzer": "^6.0.1",
-    "eslint": "~7.12.1",
+    "eslint": "~7.15.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^5.2.3",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
-    "ts-node": "~9.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
     "typescript": "~4.0.5"
   },
   "browser": {
