--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
                 "rxjs-compat",
                 "hammerjs",
                 "crypto-js",
+                "video.js",
                 "angular2-moment"
             ],
             "outputPath": "dist",
@@ -40,7 +41,8 @@
             ],
             "styles": [
                 "src/styles.css",
-                "src/cloud-theme.scss"
+                "src/cloud-theme.scss",
+                "node_modules/video.js/dist/video-js.min.css"
             ],
             "scripts": []
           },
