--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "@angular/animations": "~11.0.4",
-    "@angular/cdk": "~11.0.2",
+    "@angular/cdk": "~11.0.3",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
     "@angular/forms": "~11.0.4",
-    "@angular/material": "~11.0.2",
+    "@angular/material": "~11.0.3",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
@@ -31,6 +31,7 @@
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.3",
+    "video.js": "^7.10.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "@angular/language-service": "~11.0.4",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.14.14",
     "codelyzer": "^6.0.1",
     "eslint": "~7.15.0",
     "jasmine-core": "~3.6.0",
