--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-cam-cloud",
-  "version": "1.1.9",
+  "version": "1.2.1",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -11,48 +11,49 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~11.2.0",
-    "@angular/cdk": "~11.2.0",
-    "@angular/common": "~11.2.0",
-    "@angular/compiler": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/material": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
-    "core-js": "^3.8.3",
+    "@angular/animations": "~12.1.2",
+    "@angular/cdk": "~12.1.2",
+    "@angular/common": "~12.1.2",
+    "@angular/compiler": "~12.1.2",
+    "@angular/core": "~12.1.2",
+    "@angular/forms": "~12.1.2",
+    "@angular/material": "~12.1.2",
+    "@angular/platform-browser": "~12.1.2",
+    "@angular/platform-browser-dynamic": "~12.1.2",
+    "@angular/router": "~12.1.2",
+    "core-js": "^3.12.2",
     "crypto-js": "^4.0.0",
+    "crypto-browserify": "^3.12.0",
     "hammerjs": "^2.0.8",
     "ngx-infinite-scroll": "~10.0.1",
     "ngx-moment": "~5.0.0",
     "resize-observer-polyfill": "^1.5.1",
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.6.3",
-    "tslib": "^2.1.0",
-    "video.js": "^7.11.4",
-    "zone.js": "^0.11.3"
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "tslib": "^2.3.0",
+    "video.js": "^7.13.3",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.4",
-    "@angular/cli": "~11.1.4",
-    "@angular/compiler-cli": "~11.2.0",
-    "@angular/language-service": "~11.2.0",
-    "@types/jasmine": "^3.6.3",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^14.14.25",
-    "codelyzer": "^6.0.1",
-    "eslint": "~7.19.0",
-    "jasmine-core": "~3.6.0",
+    "@angular-devkit/build-angular": "~12.1.2",
+    "@angular/cli": "~12.1.2",
+    "@angular/compiler-cli": "~12.1.2",
+    "@angular/language-service": "~12.1.2",
+    "@types/jasmine": "^3.8.1",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.4.0",
+    "codelyzer": "^6.0.2",
+    "eslint": "~7.31.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.1.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.1.5"
+    "ts-node": "~10.1.0",
+    "typescript": "~4.3.5"
   },
   "browser": {
     "crypto": false
